[package]
name = "venice"
version = "0.1.0"
authors = ["Alexandru Scvortov <code@scvalex.net>"]
description = "A game of auctions"
homepage = "https://github.com/scvalex/venice"
repository = "https://github.com/scvalex/venice.git"
readme = "README.md"
license = "GPL-3.0"

[dependencies]
rustc-serialize = "0.3"
rust-crypto = "0.2"
docopt = "0.6"
websocket = "0.12"
